# jaxley-mech

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
jaxley_addons/channels/: __init__.py  fm97.py
jaxley_mech/: __init__.py  __version__.py  find_mech.py  solvers.py  utils.py
jaxley_mech/channels/: __init__.py  _base.py  aoyama00.py  benav12.py  benison.py  benison01.py  chan24.py  chen24.py  clark13.py  fm97.py  fohlmeister97.py  hh.py  hodgkin52.py  kamiyama09.py  kou96.py  kwu09.py  l5pc.py  liu04.py  lk04.py  lk04x.py  osuy03.py  pospischil.py  tfmc90.py  torre90.py  uiki96.py  usui96.py
jaxley_mech/mechanisms/: solvers.py
jaxley_mech/mechanisms/channels/: aoyama00.py  benison01.py  chen24.py  fohlmeister97.py  hodgkin52.py  kamiyama09.py  l5pc.py  torre90.py  usui96.py
jaxley_mech/pumps/: __init__.py  dbs93.py  destexhe.py
jaxley_mech/synapses/: __init__.py  destexhe98.py  dms94.py  dms98.py  dms98kai.py  feedback_ribbon.py  gap_junction.py  iku98.py  nhka14.py  ribbon.py  ribbon2.py  ribbon_mGluR6.py
libretions/channels/: fm97.py
notebooks/: fm97.ipynb
notebooks/channels/: aoyama00.ipynb  benav12.ipynb  benison.ipynb  benison01.ipynb  chan24.ipynb  chen24.ipynb  fm97 copy.ipynb  fm97.ipynb  fohlmeister97.ipynb  hh.ipynb  hodgkin52 copy.ipynb  hodgkin52-noise.ipynb  hodgkin52.ipynb  kamiyama09.ipynb  kwu09.ipynb  l5pc.ipynb  liu04.ipynb  lk04.ipynb  osuy03.ipynb  ribbon.ipynb  tfmc90.ipynb  torre90.ipynb  uiki96.ipynb  usui96.ipynb
notebooks/channels/data/: photocurrent.npy
notebooks/synapses/: destexhe98.ipynb  dms94.ipynb  dms98.ipynb  dms98kai.ipynb  feedback_ribbon.ipynb  gap_junction.ipynb  iku98.ipynb  nhka14.ipynb  ribbon.ipynb  ribbon2.ipynb  ribbon_mGluR6.ipynb
tests/: test_hodgkin52_states.py  test_init_state.py  test_pickle.py  test_solvers.py  test_synapse_indexing.py
tests/manual_channels/: __init__.py  hodgkin52_manual.py
