[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxley-mech"
version = "0.3.1"  
description = "A Jaxley-based library of ion channels and synapses for biophysical neuron models."
authors = [
]
requires-python = ">=3.11.0"
dependencies = [
    "jax[cpu]",
    "numpy",
    "pandas",
    "matplotlib",
    "jaxley",
    "diffrax>=0.6",
    "equinox>=0.11.8",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "ruff",
    "jupyter",
    "ipykernel",
    "mkdocs",
    "mkdocs-material",
    "markdown-include",
    "mkdocs-redirects",
    "mkdocstrings[python]>=0.18",
    "neuron",
    "pytest",
    "pyright",
    "watermark",
    "tqdm",
]

[tool.setuptools]
packages = {find = {}}
